Force https protocol

--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-@import url(http://code.cdn.mozilla.net/fonts/fira.css);
+@import url(//code.cdn.mozilla.net/fonts/fira.css);
 body {
 	background: #F8F8F8;
 	padding: 0;
