--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,6 @@ body {
 	margin: 0;
 	font-family: "Fira Sans", Roboto, Arial, sans-serif;
 }
-
 a {
 	color: #177EE5;
 	text-decoration: none;
@@ -131,10 +130,10 @@ h1 {
 	border-radius: 3px;
 	height: 64px;
 	width: 64px;
-	overflow: hidden;
 	text-align: center;
 	position: relative;
 	line-height: 1.5;
+	transition: margin 0.3s;
 }
 
 .file-input[size="16x16"] {
@@ -145,12 +144,12 @@ h1 {
 }
 .file-input[size="64x64"] {
 	background-size: 64px;
-	background-position: center 7px !important
 }
 .file-input[selected] {
 	background-position: center;
 	background-repeat: no-repeat;
 	background-color: #E5E5E5;
+	margin-bottom: 30px;
 }
 
 .file-input[selected]::before, .file-input[selected]:not([size])::after {
@@ -158,11 +157,12 @@ h1 {
 }
 
 .file-input[selected]::before, .file-input[selected]::after {
+	transition: all 0.3s;
 	content: attr(size) !important;
 	font-size: 11pt !important;
 	color: gray;
 	position: absolute !important;
-	bottom: 0 !important;
+	bottom: -30px !important;
 	left: 50% !important;
 	-webkit-transform: translate(-50%,0) !important;
 	transform: translate(-50%,0) !important;
